--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -13,6 +13,7 @@ RUN apt-get install -y libglib2.0-0
 
 RUN mkdir /root/.pip
 ADD deploy/pip.conf /root/.pip
+RUN pip install torch==1.7.1+cu101 torchvision==0.8.2+cu101 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
 ADD requirements.txt /root/requirements.txt
 RUN pip install -r /root/requirements.txt
 
